--- a/UltimatePassword/UltiPw.css
+++ b/UltimatePassword/UltiPw.css
@@ -3,6 +3,10 @@
     padding: 0;
     list-style: none;
 }
+h1{
+    font-size: 36px;
+    color: #2c2c2c90;
+}
 .section-ultimatePW{
     width: 100%;
     height: 100vh;
@@ -11,7 +15,7 @@
 }
 .ultimatePW{
     width: 500px;
-    height: 450px;
+    height: 550px;
     margin: auto;
     padding-top: 30px;
     display: flex;
@@ -30,11 +34,13 @@
     padding: 20px 0;
     border-radius: 20px;
     border: none;
+    font-size: 32px;
 }
 .hint-zone{
     width: 400px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 36px;
     margin: 10px;
     padding: 10px;
@@ -55,7 +61,7 @@
     text-decoration: none;
     text-shadow: 0px 1px 0px #1570cd;
 }
-.hint-zone .display,span{
+.hint-zone .display{
     display: block;
     background: linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
     border-radius: 6px;
@@ -63,11 +69,13 @@
     cursor: pointer;
     color: #333333;
     font-family: Arial;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
-    padding: 6px 50px;
+    padding: 13.5px 50px;
     text-decoration: none;
     text-shadow: 0px 1px 0px #ffee66;
+    width: 250px;
+    text-align: center;
 }
 .button-zone{
     width: 400px;
@@ -184,4 +192,26 @@
 .clear-btn:active{
     position: relative;
     top: 1px;
+}
+
+.checkAnswer{
+    box-shadow: inset 0px 1px 0px 0px #fff6af;
+    background: linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+    background-color: #ffec64;
+    border-radius: 6px;
+    border: 1px solid #ffaa22;
+    display: inline-block;
+    cursor: pointer;
+    color: #333333;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #837405;
+}
+.warning{
+    font-size: 24px;
+    font-weight: 700;
+    color: rgba(249, 122, 3, 0.881);
 }
