--- a/UltimatePassword/UltiPw.css
+++ b/UltimatePassword/UltiPw.css
@@ -9,7 +9,7 @@ h1{
 }
 .section-ultimatePW{
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     align-items: center;
 }
@@ -82,6 +82,7 @@ h1{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
+    margin-top: 15px;
 }
 .btn1-6{
     display: flex;
@@ -210,8 +211,78 @@ h1{
     text-decoration: none;
     text-shadow: 0px 1px 0px #837405;
 }
+.warning-zone{
+    height: 30px;
+}
 .warning{
     font-size: 24px;
     font-weight: 700;
     color: rgba(249, 122, 3, 0.881);
+}
+.HP {
+    width: 100%;
+    height: 20vh;
+    text-align: center;
+    color: #2c2c2c90;
+}
+#hpZone {
+    width: 400px;
+    height: 100px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid #2c2c2c90;
+}
+
+.heart {
+    width: 30px;
+    height: 30px;
+    margin: 20px;
+    position: relative;
+    transform: rotate(45deg);
+    background-color: #fa0404;
+}
+
+.heart:before,
+.heart:after {
+    content: '';
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: absolute;
+    left: -15px;
+    background-color: #fa0404;
+}
+
+.heart:after {
+    left: 0;
+    top: -15px;
+    background-color: #fa0404;
+}
+
+.blackHeart {
+    width: 50px;
+    height: 50px;
+    margin: 20px 0;
+    position: relative;
+    transform: rotate(45deg);
+    background-color: #000;
+}
+
+.blackHeart:before,
+.blackHeart:after {
+    content: '';
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    left: -25px;
+    background-color: #000;
+}
+
+.blackHeart:after {
+    left: 0;
+    top: -25px;
+    background-color: #000;
 }
