--- a/UltimatePassword/UltiPw.css
+++ b/UltimatePassword/UltiPw.css
@@ -261,7 +261,7 @@ h1{
     background-color: #fa0404;
 }
 
-.blackHeart {
+/* .blackHeart {
     width: 50px;
     height: 50px;
     margin: 20px 0;
@@ -285,4 +285,4 @@ h1{
     left: 0;
     top: -25px;
     background-color: #000;
-}
+} */
