--- a/Day6HW-RWD-Menu/RWD-menu.css
+++ b/Day6HW-RWD-Menu/RWD-menu.css
@@ -5,6 +5,7 @@
     list-style: none;
     line-height: 1;
     font-family: 'Noto Sans TC', sans-serif;
+    box-sizing: border-box;
 }
 #menu-control {
     display: none;
