--- a/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.css
+++ b/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.css
@@ -25,7 +25,7 @@ nav{
     --bs-nav-link-color:var(--fgray);
     font-weight: 700;
 }
-.navbar-expand-xl .navbar-collapse{
+.navbar-expand-xl .navbar-collapse {
     justify-content: space-between;
 }
 .navbar-nav .nav-link:hover{
@@ -205,6 +205,13 @@ nav{
     background-color: #F5F6F9;
     padding-bottom: 100px;
 }
+.question-title{
+    text-align: center;
+    padding-bottom: 30px;
+}
+.question-title h3{
+    font-size: 38px;
+}
 .accordion-item:last-of-type .accordion-button.collapsed{
     --bs-accordion-inner-border-radius:0;
 }
@@ -220,6 +227,9 @@ nav{
 .accordion{
     --bs-accordion-border-width:0!important;
 }
+.accordion-header{
+    font-size: 28px;
+}
 .accordion-button{
     border-bottom: 1px solid black!important;
     --bs-accordion-btn-padding-x:0;
@@ -227,10 +237,11 @@ nav{
 .accordion-button::after{
     background-image: none!important;
     transform:none!important;
+    display: none;
 }
 .accordion-button .fa-solid{
     color: var(--wgreen);
-    font-size: 40px;
+    font-size: 32px;
 }
 .QA-btn[aria-expanded="false"] .fa-minus,
 .QA-btn[aria-expanded="true"] .fa-plus {
@@ -298,10 +309,13 @@ nav{
         padding-left: 20px;
     }
     .card-body .btn{
-        width: 25%!important;
+        width: 45%!important;
     }
     .row .main-icon{
         width: 20%;
+    }
+    .d-flex .accordion-button{
+        font-size: 0.7rem;
     }
     .download-container .row .col-12{
         display: flex;
@@ -316,8 +330,17 @@ nav{
     .app-icon{
         flex-direction: column;
     }
+    .link{
+        padding-left: 15px;
+    }
+    .follow-us .icon-list{
+        justify-content: flex-start;
+    }
+    .power-by{
+        padding-left: 10px;
+    }
 }
-@media screen and (768px < width < 1024px){
+@media screen and (768px < width < 1200px){
     .navbar-nav {
         align-items: center;
         height: 100vh;
@@ -337,5 +360,20 @@ nav{
         color: var(--wgreen);
         border: none;
         border-bottom: 1px solid var(--wgreen);
+    }
+    .app-title p{
+        font-size: 32px;
+    }
+    .app-title span{
+        padding-left: 0;
+    }
+    .follow-us .icon-list{
+        padding-left: 0;
+    }
+}
+@media screen and (width > 1200px) {
+    .footer-social .icon-list {
+        justify-content: space-evenly;
+        padding-left: 0;
     }
 }
