--- a/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.css
+++ b/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.css
@@ -206,6 +206,9 @@ nav{
     display: block;
     top: -5px;
 }
+.price-version [color="green"] {
+    color: var(--wgreen);
+}
 .section-advanced{
     background-color: #F5F6F9;
     padding-bottom: 100px;
