--- a/JSHW-ApplePurchase/ApplePurchase.css
+++ b/JSHW-ApplePurchase/ApplePurchase.css
@@ -16,6 +16,7 @@
     font-size: 42px;
     font-weight: 500;
 }
+
 .color{
     margin-left: auto;
     margin-right: auto;
@@ -27,4 +28,9 @@
 .btn-outline-dark{
     width: 7rem;
     height: 7rem;
+}
+
+.total{
+    font-size: 32px;
+    font-weight: 500;
 }
