--- a/JSHW-SuperMillionaire/SuperMillionaire.css
+++ b/JSHW-SuperMillionaire/SuperMillionaire.css
@@ -1,12 +1,38 @@
+@import url(https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap);
 *{
     margin: 0;
     padding: 0;
     list-style: none;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 [q-box-id]{
+    color: #999;
     width: 6rem;
     height: 6rem;
+    position: relative;
+}
+
+.front, .back{
+    font-size: 3rem;
+    font-weight: 700;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
-    background-color: #fa0;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backface-visibility: hidden;
     
 }
+.front{
+    background-color: rgb(248, 177, 35);
+    z-index: 2;
+}
+
+.back{
+    background-color: #666;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
